--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
     <head>
 
         <meta charset="utf-8">
@@ -8,12 +7,13 @@
         <title>RandomTest2</title>
 
         <!-- ARCHIVO DE ESTILOS CSS -->
-        <link rel="stylesheet" href="./boostrap/css/bootstrap.css" >
+        <link rel="stylesheet" href="./css/bootstrap.css" >
 
         <!-- ICONOS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-        <link rel="stylesheet" href="scroll-bar.css">
+        <!-- SCROLL-BAR-->
+        <link rel="stylesheet" href="./css/scroll-bar.css">
 
         <!-- Generar linea vertical entre 2 columnas (usar en col de la derecha)-->
         <style type="text/css">
@@ -23,7 +23,6 @@
                 }
             }
         </style>
-
     </head>
 
     <body>
